--- a/index.html
+++ b/index.html
@@ -185,9 +185,9 @@
             <div class="container-fluid ">
 
                 <div class="row bg-img-1 ">
-                    <div class="col py-5">
+                    <div class="col py-5 px-5">
                         <div class="row">
-                            <div class=" col- col-md-8">
+                            <div class="  col-md-8">
 
                                 <p class="fs-4 text-danger" style="letter-spacing: .1rem;">Welcome to Mondson Trucking
                                 </p>
@@ -200,7 +200,19 @@
                                     reach
                                     their destination safely and on time.</p>
                             </div>
+
+                            <div class="row mt-3">
+
+                                <div class="col-12 col-md-2 pb-3 pb-md-0">
+                                    <button type="button" class="btn btn-outline-dark text-white w-100">Get
+                                        Started</button>
+                                </div>
+                                <div class="col-12 col-md-2">
+                                    <button type="button" class="btn btn-dark w-100">Our Services</button>
+                                </div>
+                            </div>
                         </div>
+
                     </div>
                 </div>
             </div>
