--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
         background-color: rgba(0, 0, 0, 0.1);
         /* opacity: 0.5; */
         background-size: cover;
-        /* width: 100%; */
-        /* height: 800vh; */
+
         min-height: 600px;
     }
 
@@ -182,10 +181,10 @@
 
                 </div>
             </div> -->
-            <div class="container-fluid ">
+            <div class="container-fluid bg-img-1 ">
 
-                <div class="row bg-img-1 ">
-                    <div class="col py-5 px-5">
+                <div class="row ">
+                    <div class="col pt-5 p-3 px-md-5">
                         <div class="row">
                             <div class="  col-md-8">
 
@@ -201,7 +200,7 @@
                                     their destination safely and on time.</p>
                             </div>
 
-                            <div class="row mt-3">
+                            <div class="row my-3 ">
 
                                 <div class="col-12 col-md-2 pb-3 pb-md-0">
                                     <button type="button" class="btn btn-outline-dark text-white w-100">Get
