--- a/index.html
+++ b/index.html
@@ -9,11 +9,54 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Michroma&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css"
+        integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Mondson Trucking</title>
+
+
 </head>
 <style>
+    .font-monorope {
+        font-family: "Manrope", sans-serif;
+        font-optical-sizing: auto;
+        font-weight: 400;
+        font-style: normal;
+        font-size: smaller;
+        color: white;
+        margin: 0;
+    }
+
+    .col-auto {
+        flex: 0 0 auto;
+    }
+
+    .custom-icon {
+
+        color: #ffffff;
+        border: 1px solid #ffffff;
+        padding: 6px;
+        /* Adjust this value as needed */
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        width: 30px;
+        /* Adjust this value as needed */
+        height: 30px;
+        /* Adjust this value as needed */
+
+    }
+
+    .custom-icon:hover {
+        /* color: red; */
+        background-color: red;
+        transition: 0.3s;
+    }
+
     .bg-img {
         background: url("./assets/front-side.webp") no-repeat center center;
         background-size: cover;
@@ -59,8 +102,48 @@
 <body class="text-white ">
     <header>
         <!-- social section -->
-        <section class="d-none d-lg-block">
-            <div class="container-fluid  bg-dark p-1 ">
+        <section class="d-none d-lg-block bg-dark border-bottom">
+            <!-- using this container bcz container is used already in whole website  -->
+            <div class="container pt-3 pb-3">
+
+                <div class="container-fluid">
+                    <div class="row ">
+                        <div class="col-auto ">
+                            <a class="text-decoration-none" href="">
+                                <p class="font-monorope">
+                                    <span><img src="./assets/location.png" alt="" width="20px"></span>
+                                    222 Strickland AVE Blackshear, GA, 31516
+                                </p>
+                            </a>
+                        </div>
+                        <div class="col-auto">
+                            <a class="text-decoration-none" href="">
+                                <p class="font-monorope">
+                                    <span><img src="./assets/mail.png" alt="" width="20px"></span>
+                                    Dispatch@mondsontrucking.com
+                                </p>
+                            </a>
+                        </div>
+                        <div class="col-auto ms-auto d-flex align-items-center">
+
+                            <a href="https://web.facebook.com" target="_blank" class="text-decoration-none me-2">
+                                <i class="fa-brands fa-facebook fa-xs rounded-circle p-2 custom-icon"></i>
+                            </a>
+                            <a href="" class="text-decoration-none me-2">
+                                <i class="fa-brands fa-twitter fa-xs rounded-circle p-2 custom-icon"></i>
+                            </a>
+                            <a href="" class="text-decoration-none me-2">
+                                <i class="fa-brands fa-youtube fa-xs rounded-circle p-2 custom-icon"></i>
+                            </a>
+                            <a href="" class="text-decoration-none me-2">
+                                <i class="fa-brands fa-linkedin-in fa-xs rounded-circle p-2 custom-icon"></i>
+                            </a>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- <div class="container-fluid  bg-dark p-1 ">
                 <div class="container d-flex justify-content-between">
                     <div>
 
@@ -79,6 +162,7 @@
                             </div>
                         </div>
                     </div>
+
                     <div class="row">
 
                         <div class="col">
@@ -102,8 +186,10 @@
 
                 </div>
             </div>
-            <hr class="m-0">
+            <hr class="m-0"> -->
         </section>
+
+
         <!-- header with links -->
         <section class="bg-dark p-3">
             <div class="container p-0">
@@ -151,6 +237,9 @@
         </section>
     </header>
 
+
+
+
     <main>
         <!-- 1st section -->
         <section class="bg-dark">
@@ -181,6 +270,7 @@
 
                 </div>
             </div> -->
+
             <div class="container-fluid bg-img-1 ">
 
                 <div class="row ">
