--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
     .button-rounded {
         background-color: red;
-        padding: 5px 25px;
+        padding: 3px 25px 5px 25px;
         color: white;
         border: none;
         border-radius: 20px;
@@ -215,8 +215,11 @@
                                     <a class="nav-link text-white" href="#">Contact Us</a>
                                 </li>
                             </ul>
-                            <button type="button" class="button-rounded d-md-none d-sm-block ">Get
+
+
+                            <button type="button" class="button-rounded d-lg-none d-lg-block">Get
                                 Started</button>
+
                         </div>
                         <div class=" d-none d-lg-block d-flex justify-content-center ">
                             <button type="button" class="button-rounded ">Get
