--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
         border: 1px solid white;
         border-radius: 20px;
         box-sizing: border-box;
-        transition: background-color 0.7s, color 0.7s, border-color 0.7s;
+        transition: background-color 0.5s, color 0.5s, border-color 0.5s;
     }
 
     .sec1-btn1:hover {
@@ -213,7 +213,7 @@
     .sec1-btn2:hover {
         background-color: #FF493B;
         color: white;
-        transition: 0.6s;
+        transition: 0.5s;
     }
 </style>
 
@@ -360,7 +360,7 @@
             <div class="">
                 <!-- <img class="img-fluid" src="./assets/main-truck.webp" alt=""> -->
 
-                <div class="container mt-5">
+                <div class="container mt-5 h-100">
                     <img class="img-fluid" src="./assets/2nd-truck.webp" alt="">
                 </div>
 
