--- a/index.html
+++ b/index.html
@@ -323,6 +323,69 @@
             margin-bottom: 5px;
         }
     }
+
+    /* section4 */
+    .sec4-h2 {
+        font-family: "Michroma", sans-serif;
+        font-weight: 500;
+        font-style: normal;
+        word-wrap: break-word;
+
+        font-size: 55px;
+        padding: 30px 0px;
+    }
+
+    .sec4-p1 {
+        font-family: "Manrope", sans-serif;
+        font-weight: 600;
+        font-style: normal;
+        font-size: 16px;
+        letter-spacing: 3px;
+        color: #FF493B;
+        margin: 0;
+    }
+
+    @media (max-width: 700px) {
+        .sec4-responsive {
+            text-align: center;
+
+        }
+
+        .sec4-h2 {
+            font-size: 33px;
+        }
+
+        .sec4-responsive button {
+            float: none;
+        }
+    }
+
+    @media(min-width:750px) {
+        .sec4-responsive button {
+            float: inline-end;
+        }
+    }
+
+    .sec4-h3 {
+        font-family: "Michroma", sans-serif;
+        font-weight: 500;
+        font-style: normal;
+        word-wrap: break-word;
+        line-height: 60px;
+        font-size: 25px;
+        padding: 5px 0px;
+    }
+
+    .sec4-p2 {
+        font-family: "Manrope", sans-serif;
+        font-weight: 400;
+        font-style: normal;
+        font-size: 15px;
+        line-height: 30px;
+
+        color: white;
+        margin-bottom: 20px;
+    }
 </style>
 
 
@@ -390,13 +453,13 @@
                         <div class="collapse navbar-collapse justify-content-center pe-3" id="navbarSupportedContent">
                             <ul class="navbar-nav mb-2 mb-lg-0 font-michroma w-100 d-flex justify-content-between">
                                 <li class="nav-item">
-                                    <a class="nav-link active text-white" aria-current="page" href="#">Home</a>
+                                    <a class="nav-link active text-white" aria-current="page" href="#section1">Home</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-white" href="#">About Us</a>
+                                    <a class="nav-link text-white" href="#section3">About Us</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-white" href="#">Services</a>
+                                    <a class="nav-link text-white" href="#section4">Services</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link text-white" href="#">Why Choose Us</a>
@@ -433,7 +496,7 @@
 
     <main>
         <!-- 1st section -->
-        <section>
+        <section id="section1">
 
             <div class="container-fluid bg-img-1 h-100 h-md-75 h-lg-50"">
                 <div class=" row ">
@@ -521,7 +584,7 @@
         </section>
 
         <!-- 3rd section -->
-        <section class=" py-5" style="background-color: #0B1117;">
+        <section id="section3" class=" py-5" style="background-color: #0B1117;">
 
 
             <div class="container ">
@@ -577,126 +640,143 @@
         </section>
 
         <!-- 4th section -->
-        <section class="py-5" style="background-color: #0F171F;">
-
-
-            <div class="row text-center">
-                <div class="col-12 col-md-8">
-                    <p class="font-monospace text-danger fs-5 box2">Our Services</p>
-                    <p class="font-monospace text-white fs-3 box2">Excellence in Transportation for Fresh Goods</p>
-
-                </div>
-                <div class="col-12 col-md-4 pb-3 box2">
-
-                    <button type="button" class="btn btn-danger ">Contact Us</button>
-
-                </div>
-            </div>
+        <section id="section4" class="py-5" style="background-color: #0F171F;">
 
             <div class="container">
-                <div class="row gy-5">
-                    <div class="col-12 col-md-4 bg-dark box3">
-                        <div class="container p-4">
-                            <img class="img-fluid" src="./assets/ship-icon.webp" alt="" width="30px">
-                            <p class="font-monospace text-white fs-3">Dry Van</p>
-                            <p class="font-monospace text-white fs-5">Maintain the integrity of your products with our
-                                dependable temperature-controlled vehicles, which are ideal for transporting perishable
-                                items.</p>
-                            <img src="./assets/right-arrow.png" alt="" width="30px">
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-4 bg-dark box4">
-                        <div class="container p-4">
-                            <img class="img-fluid" src="./assets/aeroplane-icon.webp" alt="" width="30px">
-                            <p class="font-monospace text-white fs-3">Drop Equipment</p>
-                            <p class="font-monospace text-white fs-5">You can easily move your freight with our drop
-                                equipment trucks, which are made to make loading and unloading go more quickly.</p>
-                            <img src="./assets/right-arrow.png" alt="" width="30px">
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-4 bg-dark box5">
-                        <div class="container p-4">
-                            <img class="img-fluid" src="./assets/fleet-icon.webp" alt="" width="30px">
-                            <p class="font-monospace text-white fs-3">Dedicated Fleet</p>
-                            <p class="font-monospace text-white fs-5">Our trucks offer around-the-clock shipping
-                                services across North America, tailored to meet your business's unique transportation
-                                needs.</p>
-                            <img src="./assets/right-arrow.png" alt="" width="30px">
-                        </div>
-                    </div>
-                </div>
-                <div class="row gy-5 mt-3">
-                    <div class="col-12 col-md-4 bg-dark box6">
-                        <div class="container p-4">
-                            <img class="img-fluid" src="./assets/post-icon.webp" alt="" width="30px">
-                            <p class="font-monospace text-white fs-3">Temp Controlled</p>
-                            <p class="font-monospace text-white fs-5">Maintain the integrity of your products with our
-                                dependable temperature-controlled vehicles, which are ideal for transporting perishable
-                                items.</p>
-                            <img src="./assets/right-arrow.png" alt="" width="30px">
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-4 bg-dark box7">
-                        <div class="container p-4">
-                            <img class="img-fluid" src="./assets/container-icon.webp" alt="" width="30px">
-                            <p class="font-monospace text-white fs-3">Power Only</p>
-                            <p class="font-monospace text-white fs-5">Mondson Truck Dispatch offers power-only truck
-                                services to make sure that trailers that don't have their own power can be transported
-                                safely</p>
-                            <img src="./assets/right-arrow.png" alt="" width="30px">
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-4 bg-dark box8">
-                        <div class="container p-4">
-                            <img class="img-fluid" src="./assets/container-icon.webp" alt="" width="30px">
-                            <p class="font-monospace text-white fs-3">Flatbed</p>
-                            <p class="font-monospace text-white fs-5">Flatbed truck services from Mondson Truck Dispatch
-                                will get your specialized and large goods to its destination quickly and safely.</p>
-                            <img src="./assets/right-arrow.png" alt="" width="30px">
-                        </div>
-                    </div>
 
-                </div>
-                <div class="row gy-5 mt-3 box9">
-                    <div class="col-12 col-md-4 bg-dark ">
-                        <div class="container p-4">
-                            <img src="./assets/girl-icon.webp" alt="" width="30px">
-                            <p class="font-monospace text-white fs-3">Drayage</p>
-                            <p class="font-monospace text-white fs-5">We specialize in drayage, offering efficient
-                                container transport across North America to enhance supply chain efficiency for
-                                businesses.</p>
-                            <img src="./assets/right-arrow.png" alt="" width="30px">
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-4 bg-dark box10">
-                        <div class="container p-4">
-                            <img src="./assets/girl-icon.webp" alt="" width="30px">
-                            <p class="font-monospace text-white fs-3">Expedited</p>
-                            <p class="font-monospace text-white fs-5">At Mondson Truck Dispatch, we specialize in
-                                expedited trucking and offer quick and easy transportation options.</p>
-                            <img src="./assets/right-arrow.png" alt="" width="30px">
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-4 bg-dark box11">
-                        <div class="container p-4">
-                            <img src="./assets/girl-icon.webp" alt="" width="30px">
-                            <p class="font-monospace text-white fs-3">Partial Truckload</p>
-                            <p class="font-monospace text-white fs-5">Mondson Truck Dispatch offers cost-effective,
-                                efficient LTL and partial truckload services, ensuring timely transportation for smaller
-                                shipments.</p>
-                            <img src="./assets/right-arrow.png" alt="" width="30px">
-                        </div>
-                    </div>
-                </div>
 
+                <div class="row d-flex align-items-center sec4-responsive">
+                    <div class="col-12 col-md-8">
+                        <p class="sec4-p1 box2">Our Services</p>
+                        <h2 class=" sec4-h2 box2">Excellence in Transportation for Fresh Goods</h2>
+
+                    </div>
+                    <div class="col-12 col-md-4 pb-3 box2">
+
+                        <button type="button" class="sec1-btn1 ">Contact Us</button>
+
+                    </div>
+                </div>
             </div>
+            <div class="container text-center">
+                <div class="row row-cols-1 row-cols-lg-3 row-cols-md-2 g-3">
+                    <div class="col py-5" style="background-color: #020405;">
+                        <div class=" d-flex flex-column justify-content-between h-100 p-3 text-start">
+
+                            <img src="./assets/ship-icon.webp" alt="" width="50px">
+                            <h3 class="sec4-h3">Dry Van</h3>
+                            <p class="sec4-p2">Dry van services from Mondson Truck Dispatch make sure that
+                                different
+                                kinds of things are transported safely and without damage from the weather.</p>
+                            <a href="#">
+
+                                <i class="fa-solid fa-arrow-right-long fa-lg" style="color: #FFD43B;"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col py-5" style="background-color: #020405;">
+                        <div class="d-flex flex-column justify-content-between h-100 p-3 text-start">
+                            <img src="./assets/aeroplane-icon.webp" alt="" width="50px">
+                            <h3 class="sec4-h3">Drop Equipment</h3>
+                            <p class="sec4-p2 h-100">You can easily move your freight with our drop equipment trucks,
+                                which
+                                are made to make loading and unloading go more quickly.</p>
+                            <a href="#">
+                                <i class="fa-solid fa-arrow-right-long fa-lg" style="color: #FFD43B;"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col py-5" style="background-color: #020405;">
+                        <div class="d-flex flex-column justify-content-between h-100 p-3 text-start">
+                            <img src="./assets/fleet-icon.webp" alt="" width="50px">
+                            <h3 class="sec4-h3">Dedicated Fleet</h3>
+                            <p class="sec4-p2 h-100">Our trucks offer around-the-clock shipping services across North
+                                America,
+                                tailored to meet your business's unique transportation needs.</p>
+                            <a href="#">
+                                <i class="fa-solid fa-arrow-right-long fa-lg" style="color: #FFD43B;"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col py-5" style="background-color: #020405;">
+                        <div class="d-flex flex-column justify-content-between h-100 p-3 text-start">
+                            <img src="./assets/post-icon.webp" alt="" width="50px">
+                            <h3 class="sec4-h3">Temp Controlled</h3>
+                            <p class="sec4-p2">Maintain the integrity of your products with our dependable
+                                temperature-controlled vehicles, which are ideal for transporting perishable items.</p>
+                            <a href="#">
+                                <i class="fa-solid fa-arrow-right-long fa-lg" style="color: #FFD43B;"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col py-5" style="background-color: #020405;">
+                        <div class="d-flex flex-column justify-content-between h-100 p-3 text-start">
+                            <img src="./assets/container-icon.webp" alt="" width="50px">
+                            <h3 class="sec4-h3">Power Only</h3>
+                            <p class="sec4-p2">Mondson Truck Dispatch offers power-only truck services to make sure that
+                                trailers that don't have their own power can be transported safely.</p>
+                            <a href="#">
+                                <i class="fa-solid fa-arrow-right-long fa-lg" style="color: #FFD43B;"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col py-5" style="background-color: #020405;">
+                        <div class="d-flex flex-column justify-content-between h-100 p-3 text-start">
+                            <img src="./assets/container-icon.webp" alt="" width="50px">
+                            <h3 class="sec4-h3">Flatbed</h3>
+                            <p class="sec4-p2 h-100">Flatbed truck services from Mondson Truck Dispatch will get your
+                                specialized and large goods to its destination quickly and safely.</p>
+                            <a href="#">
+                                <i class="fa-solid fa-arrow-right-long fa-lg" style="color: #FFD43B;"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col py-5" style="background-color: #020405;">
+                        <div class="d-flex flex-column justify-content-between h-100 p-3 text-start">
+                            <img src="./assets/girl-icon.webp" alt="" width="50px">
+                            <h3 class="sec4-h3">Drayage</h3>
+                            <p class="sec4-p2 h-100">We specialize in drayage, offering efficient container transport
+                                across
+                                North America to enhance supply chain efficiency for businesses.</p>
+                            <a href="#">
+                                <i class="fa-solid fa-arrow-right-long fa-lg" style="color: #FFD43B;"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col py-5" style="background-color: #020405;">
+                        <div class="d-flex flex-column justify-content-between h-100 p-3 text-start">
+                            <img src="./assets/girl-icon.webp" alt="" width="50px">
+                            <h3 class="sec4-h3">Expedited</h3>
+                            <p class="sec4-p2 h-100">At Mondson Truck Dispatch, we specialize in expedited trucking and
+                                offer
+                                quick and easy transportation options.</p>
+                            <a href="#">
+                                <i class="fa-solid fa-arrow-right-long fa-lg" style="color: #FFD43B;"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col py-5" style="background-color: #020405;">
+                        <div class="d-flex flex-column justify-content-between h-100 p-3 text-start">
+                            <img src="./assets/girl-icon.webp" alt="" width="50px">
+                            <h3 class="sec4-h3">Partial Truckload</h3>
+                            <p class="sec4-p2">Mondson Truck Dispatch offers cost-effective, efficient LTL and partial
+                                truckload services, ensuring timely transportation for smaller shipments.</p>
+                            <a href="#">
+                                <i class="fa-solid fa-arrow-right-long fa-lg" style="color: #FFD43B;"></i>
+                            </a>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
 
 
 
         </section>
 
-        <!-- 4th section -->
-        <section class="bg-dark">
+        <!-- 5th section -->
+        <section class="" style="background-color: #0F171F;">
 
 
             <div class="container bg-danger  ">
